[gd_scene load_steps=3 format=3 uid="uid://bxw0ypoii30bs"]

[ext_resource type="Script" path="res://src/classes/player/laser/laser.gd" id="1_f8d40"]

[sub_resource type="PrismMesh" id="PrismMesh_gp6ra"]
size = Vector3(0.1, 0.1, 1000)

[node name="Laser" type="Node3D"]
script = ExtResource("1_f8d40")

[node name="LaserMesh" type="MeshInstance3D" parent="."]
visible = false
mesh = SubResource("PrismMesh_gp6ra")
skeleton = NodePath("../..")

[node name="LaserVisibilityTimer" type="Timer" parent="."]
wait_time = 0.05
one_shot = true

[connection signal="timeout" from="LaserVisibilityTimer" to="." method="_on_laser_visibility_timer_timeout"]
